solved merge conflicts